--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,25 @@
 <resources>
-    <string name="app_name">WhatsApp</string>
+    <string name="app_name">WhatsPrivacy</string>
 
-    <string name="tab1">CALLS</string>
-    <string name="tab2">CHATS</string>
-    <string name="tab3">CONTACTS</string>
-    <string name="action_search">Search</string>
-    <string name="action_chat">Chat</string>
-    <string name="action_new_group">New Group</string>
-    <string name="action_new_broadcast">New broadcast</string>
-    <string name="action_whatsapp_web">WhatsApp Web</string>
-    <string name="action_starred_messages">Starred messages</string>
-    <string name="action_status">Status</string>
-    <string name="action_settings">Settings</string>
-    <string name="action_clear_call_log">Clear call log</string>
-    <string name="action_calls">Calls</string>
-    <string name="action_refresh">Refresh</string>
-    <string name="action_contacts">Contacts</string>
-    <string name="action_without_icon">Without Icon</string>
-    <string name="action_with_icon">With Icon</string>
-    <string name="action_custom">Custom Tab</string>
+    <string name="tab1">PROFILE</string>
+    <string name="tab2">QUESTIONS</string>
+    <string name="group1">Yourself</string>
+    <string name="group2">Close family</string>
+    <string name="group3">Friends</string>
+    <string name="group4">Everyone</string>
+    <string name="action_sync">Sync</string>
+    <string name="action_exit_questionnaire_save">Exit and Save</string>
+    <string name="action_exit_questionnaire_no_save">Exit</string>
+    <string name="questionPrompt">With which of the following groups would you be willing to share the above message? Select one or more.</string>
+    <string name="fillerGroupName">Group Name</string>
+    <string name="profilePicture">Profile Picture</string>
+    <string name="thanksForParticipating">Thank you for participating! Please give the tablet back to the researcher.</string>
+    <string name="continueResearcher">Continue as a researcher</string>
+    <string name="participant_file_key">jlcmoore.whatsprivacy.PARTICIPANT_FILE_KEY</string>
+    <string name="survey_database">survey</string>
+    <string name="fillerCategoryName">Category Name</string>
+    <string name="fillerQuestionName">Question Identifier</string>
+    <string name="sample_question">This is a sample question!</string>
+    <string name="sample_question_long">All work and no play makes Jack a very dull boy. All work and no play makes Jack a very dull boy. All work and no play makes Jack a very dull boy. All work and no play makes Jack a very dull boy. All work and no play makes Jack a very dull boy. All work and no play makes Jack a very dull boy.</string>
 
 </resources>
